--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  provider: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  shake: ^1.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
